# revscoring

./: CHANGELOG.md  Makefile  pyproject.toml  requirements.txt
revscoring/: __init__.py  score_processor.py
revscoring/languages/: english.py
revscoring/scoring/models/: model.py  sklearn.py
revscoring/utilities/: score.py
tests/languages/: test_basque.py
