[project]
name = "revscoring"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=0.28.5",
    "deep-merge>=0.0.1,<0.0.999",
    "deltas>=0.7.0,<0.7.999",
    "docopt>=0.6.2,<0.6.999",
    "flashtext==2.7",
    "gensim>=3.8.1",
    "hanziconv>=0.3.2,<0.3.999",
    "mmh3>=2.5.1,<2.5.999",
    "more-itertools>=7.2.0",
    "mwapi>=0.5.0,<0.6.999",
    "mwbase>=0.1.4,<0.1.999",
    "mwparserfromhell>=0.6.5,<0.6.999",
    "mwtypes>=0.4.0",
    "mysqltsv>=0.0.7,<0.0.999",
    "nltk>=3.6.6",
    "numpy>=1.21.5",
    "pyenchant>=3.2.2",
    "pytest>=8.3.5",
    "pytz>=2017.2",
    "requests>=2.0.0,<2.999.999",
    "scikit-learn>=1.0.2",
    "scipy>=1.5.4",
    "tabulate>=0.9.0,<0.9.999",
    "tqdm>=4.5.0",
    "yamlconf-wmf==0.2.10",
]

dynamic = ['license','authors','classifiers','scripts']
